CREATE TABLE USUARIOS (
  ID NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY PRIMARY KEY,
  NOME VARCHAR2(200),
  EMAIL VARCHAR2(200),
  TIPO VARCHAR2(50)
);

CREATE TABLE PROJETOS (
  ID NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY PRIMARY KEY,
  TITULO VARCHAR2(200),
  DESCRICAO VARCHAR2(2000),
  STATUS VARCHAR2(50),
  DATA_INICIO DATE,
  USUARIO_ID NUMBER,
  CONSTRAINT FK_PROJ_USU FOREIGN KEY (USUARIO_ID) REFERENCES USUARIOS(ID)
);

CREATE TABLE RECURSOS (
  ID NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY PRIMARY KEY,
  TIPO VARCHAR2(100),
  QUANTIDADE NUMBER,
  PROJETO_ID NUMBER,
  CONSTRAINT FK_RECUR_PROJ FOREIGN KEY (PROJETO_ID) REFERENCES PROJETOS(ID)
);